--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
   <body class="bg-slate-100">
     <div id="root"></div>
     <!-- Change script type to text/babel to be processed by Babel -->
-    <script type="text/babel" data-type="module" src="/index.tsx"></script>
+    <script type="text/babel" data-type="module" src="./index.tsx"></script>
   </body>
 </html>
