feat: Configure Babel for TS/React transpilation
Update index.html to include the 'react' and 'typescript' presets in the Babel configuration. This enables the application to correctly transpile TypeScript and JSX code directly in the browser.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body class="bg-slate-100">
     <div id="root"></div>
-    <!-- Change script type to text/babel to be processed by Babel -->
-    <script type="text/babel" data-type="module" src="./index.tsx"></script>
+    <!-- Configure Babel to use react and typescript presets -->
+    <script type="text/babel" data-presets="react,typescript" data-type="module" src="./index.tsx"></script>
   </body>
 </html>
